# papersmith-agent

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo_phase1.py  docker-compose.yml  pyproject.toml  requirements.txt  run_ui.sh
.github/workflows/: test.yml
.kiro/hooks/: doc-review-consolidation.kiro.hook  verify-task-completion.kiro.hook
.kiro/specs/papersmith-agent/: design.md  requirements.md  tasks.md  testing-strategy.md
.kiro/specs/ui-e2e-testing/: tasks.md
.kiro/steering/: development-guidelines.md  git-workflow-automation.md
demo_cache/chroma/: chroma.sqlite3
docs/: BRANCHING_STRATEGY.md  CI_OPTIMIZATION.md  DOCKER_GUIDE.md  ERROR_HANDLING.md  PROJECT_STATUS.md  TESTING.md  UI_GUIDE.md
scripts/: coverage_report.sh
src/: __init__.py
src/api/: index_holder.py  main.py
src/clients/: __init__.py  arxiv_client.py  chroma_client.py
src/models/: config.py  paper.py  rag.py
src/services/: __init__.py  embedding_service.py  llm_service.py  paper_service.py  rag_service.py
src/utils/: config_loader.py  errors.py  logger.py
tests/: conftest.py
tests/connectivity/: __init__.py  test_gemini_api.py
tests/e2e/: __init__.py  conftest.py  test_backend_switching.py  test_base_page.py  test_capture_utils.py  test_failure_capture.py  test_home_page.py  test_paper_workflow.py  test_papers_page.py  test_playwright_setup.py  test_rag_page.py  test_rag_workflow.py  test_search_page.py
tests/e2e/fixtures/: __init__.py
tests/e2e/pages/: __init__.py  base_page.py  home_page.py  papers_page.py  rag_page.py  search_page.py
tests/e2e/utils/: __init__.py  capture.py
tests/fixtures/: __init__.py  mock_responses.py
tests/integration/: test_api_integration.py  test_arxiv_integration.py  test_chroma_integration.py  test_multi_backend.py  test_rag_pipeline.py  test_rag_service.py
tests/unit/: test_embedding_service.py  test_error_handler.py  test_paper_service.py  test_rag_service.py
tests/unit/api/: __init__.py  test_endpoints.py
tests/unit/clients/: test_arxiv_client.py  test_chroma_client.py
tests/unit/models/: test_config.py  test_paper.py  test_rag.py
tests/unit/services/: test_llm_service.py
ui/: README.md  __init__.py  app.py  config.py
ui/components/: README.md  __init__.py  example_usage.py  paper_card.py  rag_form.py  search_form.py  styles.py
ui/pages/: 1_search.py  2_rag.py  3_papers.py  __init__.py
ui/utils/: README.md  __init__.py  error_handler.py
